# StreamGate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  compile_commands.json  docker-compose.yml  schema.sql
.cache/clangd/index/: AuthManager.cpp.E24D4821319BEE53.idx  AuthManager.h.196089D7CD0A720B.idx  AuthService.cpp.C6D24B929C52CBE0.idx  CacheManager.cpp.039B265A29DAD4DB.idx  CacheManager.h.CB3044B89FC700F8.idx  ConfigLoader.cpp.EE578D85C8EE95C5.idx  ConfigLoader.h.BA0B7735BCDAB506.idx  DBManager.cpp.51C51EC40F848E02.idx  DBManager.h.24963F6D82742600.idx  HookServer.cpp.73B47005FE71C083.idx  HookServer.h.AE04CA1BC1DFA75E.idx  main.cpp.7132B8356CF0E18C.idx  main.cpp.C7C3CFC1BCAF68F4.idx
config/: config.ini.example  nodes.json  nodes.json.example  streamgate.conf
include/: AuthManager.h  CacheManager.h  CacheMetricsProvider.h  ConfigLoader.h  DBManager.h  DatabaseMetricsProvider.h  EnumToString.h  HealthChecker.h  HookController.h  HookServer.h  HookUseCase.h  HybridAuthRepository.h  IAuthRepository.h  IMetricsProvider.h  IStreamStateManager.h  Logger.h  MetricsCollector.h  MetricsRegistry.h  NodeConfig.h  RedisStreamStateManager.h  SchedulerMetricsProvider.h  ServerMetricsProvider.h  StreamAuthData.h  StreamTask.h  StreamTaskScheduler.h  StreamTaskSerializer.h  ThreadPool.h  ZlmHookCommon.h
src/: CMakeLists.txt
src/auth/: AuthManager.cpp
src/cache/: CacheManager.cpp
src/db/: DBManager.cpp
src/main/: HookController.cpp  HookServer.cpp  main.cpp
src/metrics/: CacheMetricsProvider.cpp  DatabaseMetricsProvider.cpp  MetricsCollector.cpp  SchedulerMetricsProvider.cpp  ServerMetricsProvider.cpp
src/models/: StreamAuthData.cpp
src/repository/: HybridAuthRepository.cpp  RedisStreamStateManager.cpp
src/scheduler/: StreamTaskScheduler.cpp
src/test/: diagnose_empty_metrics.sh  test_auth.cpp  test_monitoring.sh  test_streamgate.sh
src/util/: ConfigLoader.cpp  EnumToString.cpp  HealthChecker.cpp  HookUseCase.cpp  Logger.cpp  NodeConfig.cpp  StreamTaskSerializer.cpp  ThreadPool.cpp  ZlmHookCommon.cpp
